charon/tests/cargo/issue-396-lib-bin.out
error: extern location for issue_396_lib_bin does not exist: ./tests/cargo/issue-396-lib-bin/target/x86_64-unknown-linux-gnu/debug/deps/libissue_396_lib_bin-0829ccfdf82938a1.rlib
 --> src/main.rs:2:20
  |
2 |     println!("{}", issue_396_lib_bin::hello());
  |                    ^^^^^^^^^^^^^^^^^


thread 'rustc' panicked at src/bin/charon-driver/translate/translate_bodies.rs:291:35:
attempt to subtract with overflow
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting body.
 --> src/main.rs:1:1
  |
1 | / fn main() {
2 | |     println!("{}", issue_396_lib_bin::hello());
3 | | }
  | |_^

ERROR Code failed to compile
error: could not compile `issue-396-lib-bin` (bin "issue-396-lib-bin") due to 1 previous error